override stlying to fix single problematic bullet on mobile

--- a/src/BlazorApp/wwwroot/css/app.css
+++ b/src/BlazorApp/wwwroot/css/app.css
@@ -46,7 +46,7 @@ section.light {
         flex-direction: column;
         align-items: center;
         padding: 0;
-        list-style-position: outside; 
+        list-style-position: outside !important; 
     }
 
     li {
